fix postgres mount path

--- a/provider/k8s/template/resource/postgres.yml.tmpl
+++ b/provider/k8s/template/resource/postgres.yml.tmpl
@@ -75,7 +75,7 @@ spec:
         - name: POSTGRES_PASSWORD
           value: "{{.Password}}"
         volumeMounts:
-        - mountPath: /var/lib/postgresql/data
+        - mountPath: /var/lib/postgresql
           name: data
       volumes:
       - name: data
