use subpath to mount mysql

--- a/provider/k8s/template/resource/mysql.yml.tmpl
+++ b/provider/k8s/template/resource/mysql.yml.tmpl
@@ -74,6 +74,7 @@ spec:
         volumeMounts:
         - mountPath: /var/lib/mysql
           name: data
+          subPath: mysql
       volumes:
       - name: data
         persistentVolumeClaim:
