custom ingress annotations for providers

--- a/provider/k8s/template/app/ingress.yml.tmpl
+++ b/provider/k8s/template/app/ingress.yml.tmpl
@@ -10,6 +10,9 @@ metadata:
     {{ range .Services }}
     convox.ingress.service.{{.Name}}.3000.protocol: {{.Port.Scheme}}
     {{ end }}
+    {{ range $k, $v := .IngressAnnotations }}
+    {{$k}}: {{ safe $v }}
+    {{ end }}
 spec:
   tls:
   - hosts:
