--- a/provider/k8s/template/app/app.yml.tmpl
+++ b/provider/k8s/template/app/app.yml.tmpl
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{.Namespace}}
+  annotations:
+    convox.com/params: {{ safe (json .Params) }}
   labels:
     type: app
     name: {{.Name}}
