allow native load balancing on gcp

--- a/provider/k8s/template/app/app.yml.tmpl
+++ b/provider/k8s/template/app/app.yml.tmpl
@@ -3,7 +3,8 @@ kind: Namespace
 metadata:
   name: {{.Namespace}}
   annotations:
-    convox.com/params: {{ safe (json .Params) }}
+    convox.com/lock: {{ .Locked }}
+    convox.com/params: {{ safe (json .Parameters) }}
   labels:
     type: app
     name: {{.Name}}
