--- a/provider/k8s/template/app/port.yml.tmpl
+++ b/provider/k8s/template/app/port.yml.tmpl
@@ -7,7 +7,7 @@ metadata:
   annotations:
     alb.ingress.kubernetes.io/target-type: pod
     convox.service.ports.{{.Service.Port.Port}}.protocol: {{.Service.Port.Scheme}}
-    cloud.google.com/app-protocols: '{"main":"{{.Service.Port.Scheme}}"}'
+    cloud.google.com/app-protocols: '{"main":"{{ upper .Service.Port.Scheme }}"}'
   labels:
     service: {{.Service.Name}}
 spec:
