comment out ttlsecondsafterfinished until out of alpha

--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -10,7 +10,7 @@ spec:
   failedJobsHistoryLimit: 1
   jobTemplate:
     spec:
-      ttlSecondsAfterFinished: 60
+      # ttlSecondsAfterFinished: 60
       template:
         metadata:
           labels:
