only route to type=service

--- a/provider/k8s/template/app/port.yml.tmpl
+++ b/provider/k8s/template/app/port.yml.tmpl
@@ -15,6 +15,7 @@ spec:
   selector:
     service: {{.Service.Name}}
     release: {{.Release.Id}}
+    type: service
   ports:
     - name: main
       port: 3000
