--- a/provider/k8s/template/app/app.yml.tmpl
+++ b/provider/k8s/template/app/app.yml.tmpl
@@ -8,16 +8,17 @@ metadata:
   labels:
     type: app
     name: {{.Name}}
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  namespace: {{.Namespace}}
-  name: {{.Name}}
-spec:
-  podSelector: {}
-  ingress:
-  - from:
-    - namespaceSelector:
-        matchLabels:
-          system: convox
+# disabled due to external balancers
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: NetworkPolicy
+# metadata:
+#   namespace: {{.Namespace}}
+#   name: {{.Name}}
+# spec:
+#   podSelector: {}
+#   ingress:
+#   - from:
+#     - namespaceSelector:
+#         matchLabels:
+#           system: convox
