--- a/provider/k8s/template/app/app.yml.tmpl
+++ b/provider/k8s/template/app/app.yml.tmpl
@@ -8,6 +8,13 @@ metadata:
   labels:
     type: app
     name: {{.Name}}
+  ownerReferences:
+  - apiVersion: v1 # TODO: populate from .Owner
+    blockOwnerDeletion: true
+    controller: true
+    kind: Namespace # TODO: populate from .Owner
+    name: {{ .Owner.Name }}
+    uid: {{ .Owner.UID }}
 # disabled due to external balancers
 # ---
 # apiVersion: networking.k8s.io/v1
