k8s: add quotes to annotation

--- a/provider/k8s/template/app/app.yml.tmpl
+++ b/provider/k8s/template/app/app.yml.tmpl
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   name: {{.Namespace}}
   annotations:
-    convox.com/lock: {{ .Locked }}
+    convox.com/lock: "{{ .Locked }}"
     convox.com/params: {{ safe (json .Parameters) }}
   labels:
     type: app
