fix header links and add gen2

--- a/cmd/docs/templates/layout.tmpl
+++ b/cmd/docs/templates/layout.tmpl
@@ -39,11 +39,8 @@
 
 						<div class="collapse navbar-collapse" id="navbar-collapse">
 							<ul class="navbar-nav ml-auto mr-2">
-								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://convox.com/features">Features</a></li>
 								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://convox.com/blog">Blog</a></li>
-								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 active"><a class="nav-link" href="https://docs.convox.com">Docs</a></li>
-								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://convox.com/enterprise">Enterprise</a></li>
-								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://convox.com/pricing">Pricing</a></li>
+								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 active"><a class="nav-link" href="https://docs.convox.com">Documentation</a></li>
 							</ul>
 
 							<ul class="navbar-nav ml-4 d-none d-lg-flex">
@@ -97,6 +94,7 @@
 						</li>
 					</ul>
 					<ul class="navbar-nav pr-2">
+						<li class="nav-item mr-4"><a class="nav-link" href="https://docsv2.convox.com">Generation 2</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://convox.com/privacy">Privacy Policy</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://convox.com/terms">Terms of Use</a></li>
 					</ul>
