manifest: add validation and allow specifying resource link env name

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -86,11 +86,11 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
-        {{ range .Service.Resources }}
-        - name: {{ envname . }}_URL
+        {{ range .Service.ResourceMap }}
+        - name: "{{.Env}}"
           valueFrom:
             configMapKeyRef:
-              name: resource-{{.}}
+              name: resource-{{ k8sname .Name }}
               key: URL
         {{ end }}
         envFrom:
