--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -45,11 +45,11 @@ spec:
               - {{ safe . }}
             {{ end }}
             env:
-            {{ range .Service.Resources }}
-            - name: {{ envname . }}_URL
+            {{ range .Service.ResourceMap }}
+            - name: "{{.Env}}"
               valueFrom:
                 configMapKeyRef:
-                  name: resource-{{.}}
+                  name: resource-{{ k8sname .Name }}
                   key: URL
             {{ end }}
             envFrom:
