--- a/provider/k8s/template/resource/memcached.yml.tmpl
+++ b/provider/k8s/template/resource/memcached.yml.tmpl
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}
+  name: resource-{{ k8sname .Name }}
   labels:
     system: convox
     rack: {{.Rack}}
@@ -10,13 +10,13 @@ metadata:
     type: resource
     resource: {{.Name}}
 data:
-  URL: "memcached://resource-{{.Name}}.{{.Namespace}}.svc.cluster.local:11211"
+  URL: "memcached://resource-{{ k8sname .Name }}.{{.Namespace}}.svc.cluster.local:11211"
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}
+  name: resource-{{ k8sname .Name }}
   annotations:
     atom.conditions: Available=True,Progressing=True/NewReplicaSetAvailable
   labels:
@@ -54,7 +54,7 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}
+  name: resource-{{ k8sname .Name }}
   labels:
     system: convox
     rack: {{.Rack}}
