--- a/provider/k8s/template/resource/mysql.yml.tmpl
+++ b/provider/k8s/template/resource/mysql.yml.tmpl
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}
+  name: resource-{{ k8sname .Name }}
   labels:
     system: convox
     rack: {{.Rack}}
@@ -10,13 +10,13 @@ metadata:
     type: resource
     resource: {{.Name}}
 data:
-  URL: "mysql://root:{{.Password}}@resource-{{.Name}}.{{.Namespace}}.svc.cluster.local:3306/app"
+  URL: "mysql://root:{{.Password}}@resource-{{ k8sname .Name }}.{{.Namespace}}.svc.cluster.local:3306/app"
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}-mysql
+  name: resource-{{ k8sname .Name }}
   labels:
     system: convox
     rack: {{.Rack}}
@@ -33,7 +33,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}
+  name: resource-{{ k8sname .Name }}
   annotations:
     atom.conditions: Available=True,Progressing=True/NewReplicaSetAvailable
   labels:
@@ -78,13 +78,13 @@ spec:
       volumes:
       - name: data
         persistentVolumeClaim:
-          claimName: resource-{{.Name}}-mysql
+          claimName: resource-{{ k8sname .Name }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}
+  name: resource-{{ k8sname .Name }}
   labels:
     system: convox
     rack: {{.Rack}}
