--- a/provider/k8s/template/resource/redis.yml.tmpl
+++ b/provider/k8s/template/resource/redis.yml.tmpl
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}
+  name: resource-{{ k8sname .Name }}
   labels:
     system: convox
     rack: {{.Rack}}
@@ -10,30 +10,13 @@ metadata:
     type: resource
     resource: {{.Name}}
 data:
-  URL: "redis://resource-{{.Name}}.{{.Namespace}}.svc.cluster.local:6379"
----
-kind: PersistentVolumeClaim
-apiVersion: v1
-metadata:
-  namespace: {{.Namespace}}
-  name: resource-{{.Name}}-redis
-  labels:
-    system: convox
-    rack: {{.Rack}}
-    app: {{.App}}
-    resource: {{.Name}}
-spec:
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: {{ coalesce (index .Parameters "storage") "10" }}Gi
+  URL: "redis://resource-{{ k8sname .Name }}.{{.Namespace}}.svc.cluster.local:6379"
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}
+  name: resource-{{ k8sname .Name }}
   annotations:
     atom.conditions: Available=True,Progressing=True/NewReplicaSetAvailable
   labels:
@@ -66,19 +49,12 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 6379
-        volumeMounts:
-        - mountPath: /data
-          name: data
-      volumes:
-      - name: data
-        persistentVolumeClaim:
-          claimName: resource-{{.Name}}-redis
 ---
 apiVersion: v1
 kind: Service
 metadata:
   namespace: {{.Namespace}}
-  name: resource-{{.Name}}
+  name: resource-{{ k8sname .Name }}
   labels:
     system: convox
     rack: {{.Rack}}
