k8s: add support for sticky sessions

--- a/cmd/docs/templates/layout.tmpl
+++ b/cmd/docs/templates/layout.tmpl
@@ -94,7 +94,7 @@
 						</li>
 					</ul>
 					<ul class="navbar-nav pr-2">
-						<li class="nav-item mr-4"><a class="nav-link" href="https://docsv2.convox.com">Generation 2</a></li>
+						<li class="nav-item mr-4"><a class="nav-link" href="https://docsv2.convox.com">Version 2</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://convox.com/privacy">Privacy Policy</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://convox.com/terms">Terms of Use</a></li>
 					</ul>
