--- a/provider/k8s/template/system/cert-manager-letsencrypt.yml.tmpl
+++ b/provider/k8s/template/system/cert-manager-letsencrypt.yml.tmpl
@@ -1,18 +1,36 @@
 apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
- name: letsencrypt
- namespace: cert-manager
+  name: letsencrypt-dns
+  namespace: cert-manager
 spec:
  acme:
-   # The ACME server URL
    server: https://acme-v02.api.letsencrypt.org/directory
-   # Email address used for ACME registration
    email: ops@convox.com
-   # Name of a secret used to store the ACME account private key
    privateKeySecretRef:
-     name: letsencrypt
-   # Enable the HTTP-01 challenge provider
+     name: letsencrypt-dns
+   solvers:
+   - dns01:
+       cnameStrategy: None
+       rfc2136:
+         nameserver: "{{.Resolver}}:53"
+         tsigAlgorithm: HMACMD5
+         tsigKeyName: axfr
+         tsigSecretSecretRef:
+           key: secret
+           name: letsdns-tsig
+---
+apiVersion: cert-manager.io/v1alpha2
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-http
+  namespace: cert-manager
+spec:
+ acme:
+   server: https://acme-v02.api.letsencrypt.org/directory
+   email: ops@convox.com
+   privateKeySecretRef:
+     name: letsencrypt-http
    solvers:
    - http01:
        ingress:
