fixes from code review

--- a/cmd/docs/templates/404.tmpl
+++ b/cmd/docs/templates/404.tmpl
@@ -4,8 +4,8 @@
     Document not found
   </p>
   <p class="mt-3">
-    This is the documenation for the latest multi-cloud version of Convox. 
-    If you are looking for the documentation for the, ECS backed, Gen2 version of Convox please go <a href="https://docsv2.convox.com/">here</a>
+    You are viewing the documentation for the latest multi-cloud version of Convox. 
+    If you are looking for the documentation for the ECS backed Convox Version 2 please go <a href="https://docsv2.convox.com/">here</a>
   </p>
 
 {{ end }}
