--- a/cmd/docs/templates/404.tmpl
+++ b/cmd/docs/templates/404.tmpl
@@ -3,5 +3,9 @@
   <p class="mt-3">
     Document not found
   </p>
+  <p class="mt-3">
+    You are viewing the documentation for the latest multi-cloud version of Convox. 
+    If you are looking for the documentation for the ECS backed Convox Version 2 please go <a href="https://docsv2.convox.com/">here</a>
+  </p>
 
 {{ end }}
