docs: use path for pr link generation

--- a/cmd/docs/templates/layout.tmpl
+++ b/cmd/docs/templates/layout.tmpl
@@ -162,7 +162,7 @@
 
   <div id="footer">
     We welcome
-    <a href="https://github.com/convox/convox/edit/master/docs/{{.Slug}}.md">suggested changes</a>
+    <a href="https://github.com/convox/convox/edit/master/docs/{{.Path}}">suggested changes</a>
     to this document.
   </div>
 {{ end }}
