k8s: allow resource masking with manual env

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -86,7 +86,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
-        {{ range .Service.ResourceMap }}
+        {{ range $.Resources }}
         - name: "{{.Env}}"
           valueFrom:
             configMapKeyRef:
