docs: clean up images

--- a/cmd/docs/templates/layout.tmpl
+++ b/cmd/docs/templates/layout.tmpl
@@ -15,7 +15,7 @@
 			<meta property="og:title" content="Convox Platform as a Service">
 			<meta property="og:site_name" content="Convox Platform as a Service">
 			<meta property="og:description" content="Convox makes it easy to deploy and manage your applications in the cloud. Built on Docker and Kubernetes, Convox provides a complete solution for local development, CI/CD, and autoscaling">
-			<link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
+			<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 
 			<script src="/assets/jquery.min.js"></script>
 
@@ -45,7 +45,7 @@
 				<nav class="navbar navbar-expand-md navbar-dark">
 					<div class="container pt-1 pb-1">
 						<a class="navbar-brand" href="/">
-							<img src="/assets/images/logo.png" height="30">
+							<img src="/images/logo.png" height="30">
 						</a>
 
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse">
