k8s: fix syntax for timeout annotation

--- a/provider/k8s/template/app/balancer.yml.tmpl
+++ b/provider/k8s/template/app/balancer.yml.tmpl
@@ -4,7 +4,7 @@ metadata:
   namespace: {{.Namespace}}
   name: balancer-{{.Balancer.Name}}
   annotations:
-    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: 3600
+    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
   labels:
     balancer: {{.Balancer.Name}}
     service: {{.Balancer.Service}}
