use an NLB instead of classic ELB for balancers so the source IP is passed upstream

--- a/provider/k8s/template/app/balancer.yml.tmpl
+++ b/provider/k8s/template/app/balancer.yml.tmpl
@@ -5,6 +5,7 @@ metadata:
   name: balancer-{{.Balancer.Name}}
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
+    service.beta.kubernetes.io/aws-load-balancer-type: nlb
   labels:
     balancer: {{.Balancer.Name}}
     service: {{.Balancer.Service}}
