aws: use local traffic policy for custom balancers to retain ip

--- a/provider/k8s/template/app/balancer.yml.tmpl
+++ b/provider/k8s/template/app/balancer.yml.tmpl
@@ -12,6 +12,7 @@ metadata:
     type: balancer
 spec:
   type: LoadBalancer
+  externalTrafficPolicy: Local
   selector:
     service: {{.Balancer.Service}}
     release: {{.Release.Id}}
