k8s: support for ip whitelist on custom balancers

--- a/provider/k8s/template/app/balancer.yml.tmpl
+++ b/provider/k8s/template/app/balancer.yml.tmpl
@@ -13,6 +13,12 @@ metadata:
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
+  {{ with .Balancer.Whitelist }}
+  loadBalancerSourceRanges:
+  {{ range . }}
+  - "{{.}}"
+  {{ end }}
+  {{ end }}
   selector:
     service: {{.Balancer.Service}}
     release: {{.Release.Id}}
