k8s: revert to Cluster traffic policy to prevent downtime during container shifts

--- a/provider/k8s/template/app/balancer.yml.tmpl
+++ b/provider/k8s/template/app/balancer.yml.tmpl
@@ -12,7 +12,7 @@ metadata:
     type: balancer
 spec:
   type: LoadBalancer
-  externalTrafficPolicy: Local
+  externalTrafficPolicy: Cluster
   {{ with .Balancer.Whitelist }}
   loadBalancerSourceRanges:
   {{ range . }}
