local: use nginx for local router

--- a/provider/k8s/template/system/cert-manager-config.yml.tmpl
+++ b/provider/k8s/template/system/cert-manager-config.yml.tmpl
@@ -17,3 +17,21 @@ spec:
    - http01:
        ingress:
          class: nginx
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: ca
+  namespace: cert-manager
+data:
+  tls.crt: "{{.CaPublic}}"
+  tls.key: "{{.CaPrivate}}"
+---
+apiVersion: cert-manager.io/v1alpha2
+kind: ClusterIssuer
+metadata:
+  name: self-signed
+  namespace: cert-manager
+spec:
+  ca:
+    secretName: ca
