k8s: use app name as primary container name

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -74,7 +74,7 @@ spec:
       {{ end }}
       shareProcessNamespace: {{.Service.Init}}
       containers:
-      - name: main
+      - name: {{.App.Name}}
         {{ with .Service.Command }}
         args:
         {{ range shellsplit . }}
