k8s: Use app name as container name for timers

--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -39,7 +39,7 @@ spec:
           restartPolicy: Never
           shareProcessNamespace: {{.Service.Init}}
           containers:
-          - name: main
+          - name: {{.App.Name}}
             args:
             {{ range shellsplit .Timer.Command }}
               - {{ safe . }}
