docs: minor tweaks

--- a/cmd/docs/templates/layout.tmpl
+++ b/cmd/docs/templates/layout.tmpl
@@ -44,7 +44,7 @@
 			<header>
 				<nav class="navbar navbar-expand-md navbar-dark">
 					<div class="container pt-1 pb-1">
-						<a class="navbar-brand" href="/">
+						<a class="navbar-brand" href="https://www.convox.com/">
 							<img src="/images/logo.png" height="30">
 						</a>
 
@@ -54,8 +54,9 @@
 
 						<div class="collapse navbar-collapse" id="navbar-collapse">
 							<ul class="navbar-nav ml-auto mr-2">
+								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://convox.com/pro">Convox Pro</a></li>
 								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://convox.com/blog">Blog</a></li>
-								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 active"><a class="nav-link" href="https://docs.convox.com">Documentation</a></li>
+								<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 active"><a class="nav-link" href="/">Documentation</a></li>
 							</ul>
 
 							<ul class="navbar-nav ml-4 d-none d-lg-flex">
