terraform: add INSTANCE_IP env var to timers

--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -45,6 +45,10 @@ spec:
               - {{ safe . }}
             {{ end }}
             env:
+            - name: INSTANCE_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.hostIP              
             {{ range $.Resources }}
             - name: "{{.Env}}"
               valueFrom:
