k8s: Termination Grace period parameter

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -73,6 +73,7 @@ spec:
       hostNetwork: true
       {{ end }}
       shareProcessNamespace: {{.Service.Init}}
+      terminationGracePeriodSeconds: {{$.Service.Termination.Grace}}
       containers:
       - name: {{.App.Name}}
         {{ with .Service.Command }}
