Changing format for clarity and passing tests

--- a/provider/k8s/template/app/ingress.yml.tmpl
+++ b/provider/k8s/template/app/ingress.yml.tmpl
@@ -12,7 +12,11 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "{{.Service.Timeout}}"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "{{.Service.Timeout}}"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "{{.Service.Timeout}}"
-    nginx.ingress.kubernetes.io/server-snippet: "keepalive_timeout {{.Service.Timeout}}s; grpc_read_timeout {{.Service.Timeout}}s; grpc_send_timeout {{.Service.Timeout}}s; client_body_timeout {{.Service.Timeout}}s;"
+    nginx.ingress.kubernetes.io/server-snippet: |
+        keepalive_timeout {{.Service.Timeout}}s;
+        grpc_read_timeout {{.Service.Timeout}}s;
+        grpc_send_timeout {{.Service.Timeout}}s;
+        client_body_timeout {{.Service.Timeout}}s;
     {{ if .Service.Sticky }}
     nginx.ingress.kubernetes.io/affinity: cookie
     nginx.ingress.kubernetes.io/session-cookie-name: CONVOXSESSION
